--- a/aboutus.html
+++ b/aboutus.html
@@ -101,11 +101,11 @@
     <div class="pl20">
       <div class="main-title">公司简介</div>
       <div class="main-content">
-        北京牛角科技有限公司经北京工商行政管理局批准于2020年8月注册成立，注册资金为人民币100万元。公司致力于动漫及APP研发，专业提供优质高效的网络服务。网络运营代理业务。公司汇集业内精英人士组成开发，运营团队本着开放，创新，严谨，务实的理念在不断自我超越中推陈出新。为喜欢我们，一直支持我们的广大用户提供更多更好多元化有特色的新产品。
+        北京牛角科技有限公司经北京工商行政管理局批准于2020年注册成立，注册资金为人民币100万元。公司致力于动漫及APP研发，专业提供优质高效的网络服务。网络运营代理业务。公司汇集业内精英人士组成开发，运营团队本着开放，创新，严谨，务实的理念在不断自我超越中推陈出新。为喜欢我们，一直支持我们的广大用户提供更多更好多元化有特色的新产品。
       </div>
       <div class="main-title">联系我们</div>
       <div class="main-line">网站客服</div>
-      <div class="main-line">电话：010-58326589</div>
+      <div class="main-line">电话：18612149479</div>
       <div class="main-line">QQ ：398949820</div>
       <div class="main-line">邮箱：398949820@qq.com</div>
       <div class="main-line">地址：北京市朝阳区高碑店乡高碑店村民俗文化街1376号华膳园文化传媒产业园12号楼二层227室</div>
